--- a/viewer.html
+++ b/viewer.html
@@ -12,6 +12,29 @@
       <div class="toolbar-left">
         <h1 id="document-title" class="document-title">Loading document...</h1>
       </div>
+      <div class="toolbar-center">
+        <div class="zoom-controls">
+          <button id="zoom-out-btn" class="toolbar-btn zoom-btn" title="Zoom out (-)">
+            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <circle cx="11" cy="11" r="8"/>
+              <line x1="21" y1="21" x2="16.65" y2="16.65"/>
+              <line x1="8" y1="11" x2="14" y2="11"/>
+            </svg>
+          </button>
+          <span id="zoom-level" class="zoom-level">100%</span>
+          <button id="zoom-in-btn" class="toolbar-btn zoom-btn" title="Zoom in (+)">
+            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <circle cx="11" cy="11" r="8"/>
+              <line x1="21" y1="21" x2="16.65" y2="16.65"/>
+              <line x1="11" y1="8" x2="11" y2="14"/>
+              <line x1="8" y1="11" x2="14" y2="11"/>
+            </svg>
+          </button>
+          <button id="zoom-reset-btn" class="toolbar-btn" title="Reset zoom">
+            <span>Reset</span>
+          </button>
+        </div>
+      </div>
       <div class="toolbar-right">
         <button id="download-btn" class="toolbar-btn" title="Download original file" disabled>
           <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
